[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Imp Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/common/HealthDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/common/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Hit and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Agents/Enemies/Imp/ImpStats.gd" type="Script" id=5]
[ext_resource path="res://src/Agents/Enemies/Imp/Imp.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "dying"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.2, 0.5, 0.8, 1.1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 83, 84, 85 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idling"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.2, 0.5, 0.8, 1.1, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 56, 57, 58, 59, 60, 61, 62, 63 ]
}

[sub_resource type="Animation" id=4]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.2, 0.5, 0.8, 1.1, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65, 66, 67, 68, 69 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_finished_shoot_anim"
} ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 2.34105
height = 8.75349

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Imp/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.329412, 0.0823529, 0.0823529, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.88075
height = 2.6217

[node name="Imp" type="KinematicBody2D" groups=[
"Enemies",
]]
scale = Vector2( 2, 2 )
collision_layer = 16
collision_mask = 17
script = ExtResource( 6 )

[node name="HealthDisplay" parent="." instance=ExtResource( 2 )]
position = Vector2( -4.88798, -17.2118 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0786564, -14.2385 )
texture = ExtResource( 1 )
hframes = 8
vframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.5
anims/dying = SubResource( 1 )
anims/idling = SubResource( 2 )
anims/run_left = SubResource( 3 )
anims/run_right = SubResource( 4 )
anims/shoot_proj = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.166855 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="StatusPlayer" type="AnimationPlayer" parent="."]
anims/recieving_damage = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.157494, -5.19717 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
script = ExtResource( 5 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
